--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,16 @@
-##config mysql
-### Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url=jdbc:mysql://localhost:3306/BrainMusic?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=txingez93
-### Hibernate Properties
-## The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-## Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto=update
-#server.port=8080
-#config postgress heroku
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-#config send reply
+#config mysql
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/BrainMusic?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+server.port=8082
+
+##config send reply
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=fourhorsemen987@gmail.com
@@ -24,3 +19,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 horsemen.app.jwtSecret=jwtHorsemenSecretKey
 horsemen.app.jwtExpiration=86400
+#config postgress heroku
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=true
