--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,11 +19,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 horsemen.app.jwtSecret=jwtHorsemenSecretKey
 horsemen.app.jwtExpiration=86400
-config postgress heroku
+#config postgress heroku
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
